# simple-package-template

./: README.md  exemplos.py  pyproject.toml  setup.py
brasil_utils/: __init__.py  cep.py  feriados.py  formatadores.py  validadores.py
tests/: test_validadores.py
